--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
 <div class="ui container">
-  <h1 class="ui header">Hello! Commerce2</h1>
+  <div class="ui three item menu">
+    <a href="/member/index.html" class="item">Members</a>
+    <a href="/product/index.html" class="item">Products</a>
+  </div>
+</div>
+<div class="ui container">
+  <h1 class="ui header">Hello! Commerce</h1>
 </div>
 </body>
 </html>
